# NiuMa-RAG

./: README.md
ragchat-server/: Makefile  README.md  bootstrap.bat  bootstrap.sh  pyproject.toml  requirements.txt  server.py
ragchat-server/src/: main.py
ragchat-server/src/api/: __init__.py  router.py
ragchat-server/src/api/v1/: __init__.py  chat.py  chunks.py  collections.py  dicts.py  files.py  user.py
ragchat-server/src/config/: conf.py
ragchat-server/src/core/: api_contract.py  embedding_manager.py  response_code.py
ragchat-server/src/dao/: ai_ext_message_dao.py  base_dao.py  chunk_dao.py  collection_dao.py  data_dictionary_dao.py  embedding_dao.py  file_dao.py  user_dao.py
ragchat-server/src/dao/sql/: chunk_query.sql.j2  embedding_search.sql.j2  (+2 more)
ragchat-server/src/db/: pg_db.py
ragchat-server/src/dto/: ai_ext_message_dto.py  chunk_dto.py  chunk_embedding_dto.py  collection_dto.py  data_dictionary_dto.py  embedding_dto.py  file_dto.py  user_dto.py
ragchat-server/src/handler/: callback_handler.py  chat_model_handler.py  partition_handler.py  search.py  user_history_manager.py
ragchat-server/src/job/: scheduler_setup.py
ragchat-server/src/models/: ai_ext_message.py  chunk.py  collection.py  data_dictionary.py  embedding.py  file.py  user.py
ragchat-server/src/services/: ai_ext_message_service.py  base_service.py  chunk_service.py  collection_service.py  data_dictionary_service.py  embedding_service.py  file_service.py  user_service.py
ragchat-server/src/utils/: jieba_tool.py  logger.py  sql_template_manager.py
ragchat-server/uploads/: 减肥的陷阱.txt
(+21 files in other folders)
